--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
               alt="drawing of trees in yellow tones"
               class="exhibition--image"
             >
-            
+
             <p class="exhibition--name">ВИСТАВКА</p>
             <p class="exhibition--date">26.08-29.11.2019</p>
 
@@ -97,7 +97,7 @@
             <p class="exhibition--description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
           </article>
 
-          <article class="event__exhibition ">
+          <article class="event__exhibition">
             <img
               src="/images/events/Rectangle 4.1.png"
               alt="drawing of gril and a peacock"
@@ -110,6 +110,11 @@
           </article>
 
           <article class="event__lecture">
+            <img
+              src="/images/lectures/Rectangle20.png"
+              alt="orange sky "
+              class="lecture--image"
+            >
             <div class="lecture--content">
               <p class="lecture--name">ЛЕКЦІЯ</p>
               <p class="lecture--date">26/08/2019 - 11:00</p>
@@ -119,7 +124,155 @@
         </section>
       </div>
       <!-- #endregion -->
+      <!-- #region gallery -->
+      <div class="section" id="gallery">
+        <section class="gallery">
+          <h2 class="section__title">Галерея</h2>
+          <div class="gallery__slide gallery__slide-1 fade">
+            <img
+              src="/images/gallery/1st.png"
+              class="gallery__image"
+              alt="girl wearing trditional clothes"
+            >
+          </div>
+
+          <div class="gallery__slide gallery__slide-2 fade">
+            <img
+              src="/images/gallery/2nd.png"
+              class="gallery__image"
+              alt="village covered in snow"
+            >
+          </div>
+
+          <div class="gallery__slide gallery__slide-3 fade">
+            <img
+              src="/images/gallery/3rd.png"
+              class="gallery__image"
+              alt="park and a lady sitting on a bench watching others"
+            >
+          </div>
+
+          <div class="gallery__slide gallery__slide-4 fade">
+            <img
+              src="/images/gallery/4th.png"
+              class="gallery__image"
+              alt="people in the sea colored in red and orange tones"
+            >
+          </div>
+        </section>
+      </div>
+      <!-- #endregion -->
+      <!-- #region subscription -->
+      <div class="section" id="subscription">
+        <section class="subscription">
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <label for="subscription-contact">
+            <form
+              id="subscription-contact"
+              action="http://localhost:8080/"
+              method="post"
+              onsubmit="this.reset(); return false;"
+              class="subscription__form"
+            >
+              <input
+                class="subscription__form--email"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Email@gmail.com"
+                required
+              >
+              <button type="submit" class="subscription__button"></button>
+            </form>
+          </label>
+        </section>
+      </div>
+      <!-- #endregion -->
     </main>
+    <!-- #region footer -->
+    <footer class="footer">
+      <section class="footer__info">
+
+        <div class="footer__info--icons icons">
+          <a href="#header" class="icons--logo">
+            <img
+              src="/images/icons/namu.png"
+              alt="NAMU logo"
+              class="icons--img"
+            >
+          </a>
+
+          <a href="#header" class="icons--logo">
+            <img
+              src="/images/icons/fb-logo.svg"
+              alt="facebook logo"
+              class="icons--img"
+            >
+          </a>
+
+          <a href="#header" class="icons--logo">
+            <img
+              src="/images/icons/instagram.svg"
+              alt="instagram logo"
+              class="icons--img"
+            >
+          </a>
+        </div>
+
+        <div class="footer__info--schedule schedule">
+          <h4 class="schedule--title">Графік роботи</h4>
+          <p class="schedule--schedule">
+            <strong>12:00 — 20:00</strong> <br>середа<br>
+            <strong>12:00 — 20:00</strong> <br>четвер<br>
+            <strong>12:00 — 20:00</strong> <br>п’ятниця<br>
+            <strong>11:00 — 19:00</strong> <br>субота<br>
+            <strong>11:00 — 19:00</strong> <br>неділя<br>
+
+            Вихідні понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </div>
+
+        <div class="footer__info--contacts">
+          <h4 class="contacts--title">Контакти:</h4>
+          <p class="contacts--schedule">
+            вул. М. Грушевського, 6; Київ, 01001<br>
+            тел. +38 (044) 278-13-57<br>
+            факс +38 (044) 278-74-54<br>
+            e-mail: info@namu.kiev.ua
+          </p>
+        </div>
+
+        <a href="#header" class="footer__info--link">↑</a>
+      </section>
+
+      <nav class="footer__links links">
+        <ul class="links__list">
+          <li class="links__item">
+            <a href="#gallery" class="links__link">Галерея</a>
+          </li>
+
+          <li class="links__item">
+            <a href="#about-us" class="links__link">Про Нас</a>
+          </li>
+
+          <li class="links__item">
+            <a href="#events" class="links__link">Виставки та події</a>
+          </li>
+
+          <li class="links__item">
+            <a href="#contacts" class="links__link">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+
+      <section class="footer__copyright">
+        <p class="footer__copyright--name">Designed by Zhyriada Marina</p>
+        <p class="footer__copyright--rights">Copyright © 2019. All Rights Reserved.</p>
+      </section>
+    </footer>
   </body>
 </html>
 
