--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
         </div>
 
         <div class="header__bottom">
+          <a href="#menu" class="header__menu"></a>
           <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
           <div class="header__button__container">
             <button class="header__button">Квитки</button>
@@ -27,40 +28,223 @@
               <a href="#" class="header__button__arrow"></a>
             </button>
           </div>
-          <h2 class="header__second__title">Актуальні події</h2>
         </div>
+        <h2 class="header__second__title">Актуальні події</h2>
       </div>
     </header>
 
     <aside class="page__menu aside" id="menu">
       <div class="aside__container">
-        <a href="#" class="aside__close"></a>
+        <div class="aside__top">
+          <a href="#" class="aside__close"></a>
 
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a class="nav__link" href="#Galery">Галерея</a>
-            </li>
-          </ul>
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a class="nav__link" href="#">Про Нас</a>
-            </li>
-          </ul>
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a class="nav__link" href="#">Виставки та події</a>
-            </li>
-          </ul>
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a class="nav__link" href="#">Контакти</a>
-            </li>
-          </ul>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#Galery">Галерея</a>
+                <a class="nav__link" href="#">Виставки та події</a>
+              </li>
+            </ul>
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a class="nav__link" href="#">Про Нас</a>
+                <a class="nav__link" href="#">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
 
-        </nav>
+        <div class="aside__line"></div>
+
+        <div class="aside__bottom">
+          <p class="aside__text aside__head">Графік роботи</p>
+        </div>
+
+        <div class="aside__graph">
+          <p class="aside__bold">12:00 — 20:00 <span class="aside__text">середа</span></p>
+          <p class="aside__bold">12:00 — 20:00 <span class="aside__text">четвер</span></p>
+          <p class="aside__bold">12:00 — 20:00 <span class="aside__text">п’ятниця</span></p>
+          <p class="aside__bold">12:00 — 19:00 <span class="aside__text">субота</span></p>
+          <p class="aside__bold">12:00 — 19:00 <span class="aside__text">неділя</span></p>
+        </div>
+
+        <div class="aside__last">
+          <p class="aside__bold">Вихідні: <span class="aside__text">понеділок, вівторок <br>Каса припиняє роботу за 1 годину до закриття музею</span></p>
+        </div>
       </div>
     </aside>
+
+    <section id="events" class="events">
+      <div class="events__card">
+        <img
+          src="images/events/first.png"
+          class="events__photo"
+          alt="Йду і повертаюсь"
+        >
+        <div class="events__container">
+          <p class="events__container__text">ВИСТАВКА</p>
+          <h4 class="events__container__date">26.08-29.11.2019</h4>
+        </div>
+
+        <div class="events__name">
+          <h3 class="events__title">Йду і повертаюсь</h3>
+          <div class="events__box"></div>
+        </div>
+
+        <p class="events__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+      </div>
+
+      <div class="events__card">
+        <img
+          src="images/events/second.png"
+          class="events__photo"
+          alt="І спогади і мрії"
+        >
+        <div class="events__container">
+          <p class="events__container__text">ВИСТАВКА</p>
+          <h4 class="events__container__date">26.08-29.11.2019</h4>
+        </div>
+
+        <div class="events__name">
+          <h3 class="events__title">І спогади і мрії</h3>
+          <div class="events__box"></div>
+        </div>
+
+        <p class="events__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+      </div>
+    </section>
+
+    <section id="lection" class="lection">
+      <div class="lection__container">
+        <div class="lection__container__date">
+          <p class="lection__gray">ЛЕКЦІЯ</p>
+          <h4 class="lection__green">26/08/2019 - 11:00</h4>
+        </div>
+
+        <h3 class="lection__title">Від класицизму до романтизму</h3>
+      </div>
+    </section>
+
+    <section id="galery" class="galery">
+      <h3 class="galery__title">Галерея</h3>
+      <img
+        class="galery__photo"
+        src="images/galery/first.png"
+        alt="Жінка в традиційному одягу"
+      >
+
+      <img
+        class="galery__photo galery__photo__2"
+        src="images/galery/second.png"
+        alt="Гуси"
+      >
+
+      <div class="galery__container">
+        <img
+          class="galery__slider"
+          src="images/galery/slider.png"
+          alt="slider"
+        >
+      </div>
+    </section>
+
+    <section id="subscribe" class="subscribe">
+      <div class="subscribe__container">
+        <h3 class="subscribe__title">Підписка</h3>
+        <p class="subscribe__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+        <div class="subscribe__box">
+          <form
+            onsubmit="this.reset(); return false;"
+            class="subscribe__form"
+            action="submit-page.php"
+            method="get"
+            id="myForm"
+          >
+            <input
+              type="email"
+              name="email"
+              placeholder="Email"
+              class="subscribe__email"
+              required
+              form="myForm"
+            >
+          </form>
+
+          <button class="subscribe__button" type="submit">
+            <a href="#" class="subscribe__button__icon"></a>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer" id="footer">
+      <div class="footer__top">
+        <img
+          src="images/footer/namu.svg"
+          alt="footer logo"
+          class="footer__logo"
+        >
+
+        <div class="footer__container">
+          <a href="#" class="footer__icon footer__icon__facebook"></a>
+          <a href="#" class="footer__icon footer__icon__instagram"></a>
+        </div>
+      </div>
+
+      <div class="footer__graphic">
+        <p class="footer__text">Графік роботи</p>
+
+        <div class="footer__graphic__time">
+          <p class="footer__bold">12:00 — 20:00 <span class="footer__text">середа</span></p>
+          <p class="footer__bold">12:00 — 20:00 <span class="footer__text">четвер</span></p>
+          <p class="footer__bold">12:00 — 20:00 <span class="footer__text">п'ятниця</span></p>
+          <p class="footer__bold">11:00 — 19:00 <span class="footer__text">субота</span></p>
+          <p class="footer__bold">11:00 — 19:00 <span class="footer__text">неділя</span></p>
+          <br>
+          <p class="footer__text">Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину до закриття музею</p>
+        </div>
+      </div>
+
+      <div class="footer__contacts">
+        <p class="footer__text">Контакти:</p>
+
+        <div class="footer__contacts__container">
+          <a href="#" class="footer__contacts__link">вул. М. Грушевського, 6;</a>
+          <a href="#" class="footer__contacts__link">тел. +38 (044) 278-13-57</a>
+          <a href="#" class="footer__contacts__link">факс +38 (044) 278-74-54</a>
+          <a href="#" class="footer__contacts__link">e-mail: info@namu.kiev.ua</a>
+        </div>
+      </div>
+
+      <div class="footer__button__container">
+        <button class="footer__button">
+          <a href="#" class="footer__button__icon"></a>
+        </button>
+      </div>
+
+      <div class="footer__line"></div>
+
+      <nav class="footer__nav">
+        <ul class="footer__nav__list">
+          <li class="footer__nav__item">
+            <a class="footer__nav__link" href="#">Галерея</a>
+            <a class="footer__nav__link" href="#">Виставки та події</a>
+          </li>
+        </ul>
+        <ul class="footer__nav__list">
+          <li class="footer__nav__item">
+            <a class="footer__nav__link" href="#">Про Нас</a>
+            <a class="footer__nav__link" href="#">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="footer__end">
+        <p class="footer__end__text">Designed by Zhyriada Marina</p>
+        <p class="footer__end__text">Copyright © 2019. All Rights Reserved.</p>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
