--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,364 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum NAMU</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/logo.svg"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__container">
+        <div class="top-bar">
+          <div class="grid">
+            <span class="top-bar__logo icon__company">
+              NA
+              <br>
+              MU
+            </span>
+          </div>
+          <div class="top-bar__icon">
+            <a href="#menu" class="icon icon--menu"></a>
+          </div>
+        </div>
+        <div class="header__wrapper grid">
+          <div class="header__bg"></div>
+          <div class="header__info">
+            <div class="container-left">
+              <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+              <div class="header__button">
+                <a href="#events" class="button-link">
+                  <p class="button-link__title">Квитки</p>
+                  <span class="button-link__arrow">
+                    <img src="./images/icons/arrow_right-icon.svg" alt="arrow right">
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__content">
+        <div class="menu__nav nav">
+          <a href="#" class="icon icon--close"></a>
+          <ul class="nav__list">
+            <li>
+              <a href="#gallery" class="nav__link">Галерея</a>
+            </li>
+            <li>
+              <a href="#about-us" class="nav__link">Про Нас</a>
+            </li>
+            <li>
+              <a href="#events" class="nav__link">Виставки та події</a>
+            </li>
+            <li>
+              <a href="#contact" class="nav__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+        <div class="menu__schedule schedule">
+          <div class="schedule__title">
+            <p>Графік роботи</p>
+          </div>
+          <div class="menu__wrapper">
+            <ul class="schedule__list">
+              <li>
+                <span class="schedule__bold">12:00 — 20:00</span> середа
+              </li>
+              <li>
+                <span class="schedule__bold">12:00 — 20:00</span> четвер
+              </li>
+              <li>
+                <span class="schedule__bold">12:00 — 20:00</span> п’ятниця
+              </li>
+              <li>
+                <span class="schedule__bold">11:00 — 19:00</span> субота
+              </li>
+              <li>
+                <span class="schedule__bold">11:00 — 19:00</span> неділя
+              </li>
+            </ul>
+            <div class="schedule__more-info">
+              <span class="schedule__bold">Вихідні:</span> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <main class="page__main">
+      <section class="exhibition" id="gallery">
+        <div class="container">
+          <h2 class="page__header">Актуальні події</h2>
+          <div class="exhibition__wrapper">
+            <article class="exhibition__article">
+              <img
+                src="./images/exhibition1.jpg"
+                class="exhibition__image"
+                alt="Йду і повертаюсь"
+              >
+              <div class="exhibition__line">
+                <div class="exhibition__info">
+                  <p class="exhibition__type">
+                    ВИСТАВКА
+                  </p>
+                  <p class="exhibition__date">
+                    26.08-29.11.2019
+                  </p>
+                </div>
+                <h3 class="exhibition__title">
+                  Йду і повертаюсь
+                  <span class="exhibition__block"></span>
+                </h3>
+                <p class="exhibition__text">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <article class="exhibition__article">
+              <img
+                src="./images/exhibition2.jpg"
+                class="exhibition__image"
+                alt="І спогади і мрії"
+              >
+              <div class="exhibition__line">
+                <div class="exhibition__info">
+                  <p class="exhibition__type">
+                    ВИСТАВКА
+                  </p>
+                  <p class="exhibition__date">
+                    26.08-29.11.2019
+                  </p>
+                </div>
+                <h3 class="exhibition__title">
+                  І спогади і мрії
+                  <span class="exhibition__block"></span>
+                </h3>
+                <p class="exhibition__text">
+                  Національний художній музей України до
+                  100 річчя від дня народження   видатної
+                  української художниці  Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку
+                  «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+      <section class="event">
+        <div class="event__wrapper">
+          <div class="event__content">
+            <div class="event__info">
+              <p class="event__type">ЛЕКЦІЯ</p>
+              <p class="event__date">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+            <h3 class="event__title">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+      <section class="gallery" id="events">
+        <h2 class="page__header gallery__header">Галерея</h2>
+        <div class="gallery__slides">
+          <input
+            type="radio"
+            class="gallery__input"
+            id="slide-1"
+            name="slide"
+            checked=""
+          >
+          <input
+            type="radio"
+            class="gallery__input"
+            id="slide-2"
+            name="slide"
+          >
+          <input
+            type="radio"
+            class="gallery__input"
+            id="slide-3"
+            name="slide"
+          >
+          <input
+            type="radio"
+            class="gallery__input"
+            id="slide-4"
+            name="slide"
+          >
+          <div class="gallery__slides-content">
+            <div class="gallery__slider-content">
+              <img
+                class="gallery__slider"
+                src="./images/slide1.jpg"
+                alt="slide-1"
+              >
+            </div>
+            <div class="gallery__slider-content">
+              <img
+                class="gallery__slider"
+                src="./images/slide2.jpg"
+                alt="slide-2"
+              >
+            </div>
+            <div class="gallery__slider-content">
+              <img
+                class="gallery__slider"
+                src="./images/slide3.jpg"
+                alt="slide-3"
+              >
+            </div>
+            <div class="gallery__slider-content">
+              <img
+                class="gallery__slider"
+                src="./images/slide4.jpg"
+                alt="slide-4"
+              >
+            </div>
+          </div>
+          <div class="gallery__buttons">
+            <label class="gallery__button" for="slide-1"></label>
+            <label class="gallery__button" for="slide-2"></label>
+            <label class="gallery__button" for="slide-3"> </label>
+            <label class="gallery__button" for="slide-4"></label>
+          </div>
+        </div>
+      </section>
+      <section class="subscription" id="about-us">
+        <div class="container">
+          <div class="subscription__content">
+            <h2 class="subscription__title">Підписка</h2>
+            <h2 class="subscription__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </h2>
+            <form
+              action="#" method="post"
+              class="subscription__form"
+            >
+              <label class="subscription__label" for="email">
+                <input
+                  type="email"
+                  class="subscription__input"
+                  name="subscription" id="email"
+                  placeholder="E-mail"
+                  required
+                >
+                <button type="submit" class="subscription__button"></button>
+              </label>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer" id="contact">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__top">
+            <span class="icon__company">
+              NA
+              <br>
+              MU
+            </span>
+            <div class="footer__socials">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                target="_blank"
+                class="footer__social"
+              >
+                <img src="./images/icons/facebook.svg" alt="facebook">
+              </a>
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+                class="footer__social"
+              >
+                <img src="./images/icons/instagram.svg" alt="instagram">
+              </a>
+            </div>
+          </div>
+          <div class="footer__center">
+            <div class="footer__information schedule">
+              <div class="schedule__title">
+                <p>Графік роботи</p>
+              </div>
+              <div class="schedule__title">
+                <p>Контакти:</p>
+              </div>
+              <ul class="schedule__list">
+                <li>
+                  <span class="schedule__bold">12:00 — 20:00</span> середа
+                </li>
+                <li>
+                  <span class="schedule__bold">12:00 — 20:00</span> четвер
+                </li>
+                <li>
+                  <span class="schedule__bold">12:00 — 20:00</span> п’ятниця
+                </li>
+                <li>
+                  <span class="schedule__bold">11:00 — 19:00</span> субота
+                </li>
+                <li>
+                  <span class="schedule__bold">11:00 — 19:00</span> неділя
+                </li>
+                <li>
+                  <br>
+                  Вихідні понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1
+                  годину до закриття музею
+                </li>
+              </ul>
+              <div class="schedule__title">
+                <p>
+                  вул. М. Грушевського, 6; Київ, 01001
+                  <br>
+                  тел. +38 (044) 278-13-57
+                  <br>
+                  факс +38 (044) 278-74-54
+                  <br>
+                  e-mail: info@namu.kiev.ua
+                </p>
+              </div>
+              <a href="#" class="footer__button"></a>
+            </div>
+            <ul class="footer__navigation">
+              <li>
+                <a href="#gallery" class="footer__link">Галерея</a>
+              </li>
+              <li>
+                <a href="#about-us" class="footer__link">Про Нас</a>
+              </li>
+              <li>
+                <a href="#events" class="footer__link">Виставки та події</a>
+              </li>
+              <li>
+                <a href="#contact" class="footer__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer__rights">
+        <p class="footer__right-info">Designed by Zhyriada Marina</p>
+        <p class="footer__right-info">Copyright © 2019. All Rights Reserved.</p>
+      </div>
+    </footer>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
